Bug 279559 - [i18n] German version, filter: "OR" is translated to "ODER" but "OR" is needed to make the filter work
Summary: [i18n] German version, filter: "OR" is translated to "ODER" but "OR" is neede...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Collection Browser (other bugs)
Version First Reported In: 2.4.3
Platform: Debian unstable Linux
: NOR grave
Target Milestone: 2.5
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-06 23:19 UTC by Janet
Modified: 2011-09-26 11:57 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Janet 2011-08-06 23:19:58 UTC
Version:           2.4.3 (using KDE 4.6.5) 
OS:                Linux

With German language enabled the filter conditions produced by the filter editor for the collection pane only work if you manually edit them and replace the German "UND" or "ODER" with the English "AND" or "OR". 

Reproducible: Always

Steps to Reproduce:
Switch to German language in Amarok, open the filter editor for the collection, choose two conditions and combine them with "ODER". In the filter line you get the text <condition A> ODER <condition B>. This does not work. You have to manually change "ODER" to "OR".


Expected Results:  
The combining words for the filter conditions like OR and AND should ONLY be translated in the filter editor but should be "re-translated" to English in the filter box. The filter box only accepts the English words which is good because it is common to use the English words for this.

OS: Linux (i686) release 3.0-1.slh.2-aptosid-686
Compiler: gcc
Comment 1 Myriam Schweingruber 2011-08-07 10:51:38 UTC
Ouch :(
Comment 2 Nikhil Marathe 2011-08-27 09:15:03 UTC
Git commit 318f6e3c4e07ae1006e1991dae8a2f0c30cb8dae by Nikhil Marathe.
Committed on 26/08/2011 at 12:53.
Pushed by nikhilm into branch 'master'.

Bug 279559 - EditFilterDialog i18n AND/OR fix.

Use combobox index to insert English separator instead.

BUG: 279559
REVIEW: 102443

M  +1    -1    src/dialogs/EditFilterDialog.h
M  +9    -4    src/dialogs/EditFilterDialog.cpp
M  +2    -0    ChangeLog

http://commits.kde.org/amarok/318f6e3c4e07ae1006e1991dae8a2f0c30cb8dae