Bug 279559 - EditFilterDialog i18n AND/OR fix.

Use combobox index to insert English separator instead.

BUG: 279559
REVIEW: 102443